Login and signup page alignment for mobile device is fixed

--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -18,7 +18,7 @@
   border-radius: 25px;
 }
 .loginform_div {
-  width: 50%;
+  width: 100%;
   background-color: white;
   border-radius: 30px;
   margin-right: 3%;
